--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,11 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 RAPIDAPI_KEY=your-rapidapi-key
 
 # SiliconFlow LLM (server only)
+# International: https://api.siliconflow.com/v1
+# China: https://api.siliconflow.cn/v1
 SILICONFLOW_API_KEY=your-siliconflow-api-key
-SILICONFLOW_MODEL=meta-llama/Llama-3.3-70B-Instruct
+SILICONFLOW_API_BASE=https://api.siliconflow.com/v1
+SILICONFLOW_MODEL=meta-llama/Meta-Llama-3.1-8B-Instruct
 
 # Crawl4AI - full article content extraction (server only)
 # Requires a running Crawl4AI Docker container.
