--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cheerio": "^1.2.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "next": "16.1.6",
     "p-limit": "^7.3.0",
     "react": "19.2.3",
